[package]
name = "rsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl-trait-for-tuples = "0.2.2"
arrayvec = "0.7.2"
indexmap = "1.9.1"

vek = { version = "0.15", optional = true }
hashbrown = { version = "0.12", optional = true }

rsn_derive = { path = "../rsn_derive", optional = true }

[features]
default = ["derive"]
impl_vek = ["vek"]
impl_hashbrown = ["hashbrown"]
derive = ["rsn_derive"]